--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,29 @@
+buildscript {
+    ext.kotlin_version = '1.3.61'
+    repositories {
+        mavenCentral()
+    }
+    dependencies {
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+    }
+}
+
 plugins {
     id "java"
     id "edu.wpi.first.GradleRIO" version "2020.1.2"
+    id "org.jetbrains.kotlin.jvm" version "1.3.61"
+    id "idea"
+    id "org.jlleitschuh.gradle.ktlint" version "9.0.0"
 }
 
 sourceCompatibility = JavaVersion.VERSION_11
 targetCompatibility = JavaVersion.VERSION_11
 
-def ROBOT_MAIN_CLASS = "frc.robot.Main"
+def ROBOT_MAIN_CLASS = "frc.robot.RobotKt"
+
+sourceSets {
+    main.kotlin.srcDirs += 'src/generated/kotlin'
+}
 
 // Define my targets (RoboRIO) and artifacts (deployable files)
 // This is added by GradleRIO's backing project EmbeddedTools.
@@ -40,6 +57,16 @@ deploy {
 // Set this to true to enable desktop support.
 def includeDesktopSupport = true
 
+// Maven central needed for JUnit
+repositories {
+    mavenCentral()
+    jcenter()
+    mavenLocal()
+    maven { url "http://dl.bintray.com/kyonifer/maven" }
+    maven { url "https://jitpack.io" }
+    maven { url "http://dev.imjac.in/maven" }
+}
+
 // Defining my dependencies. In this case, WPILib (+ friends), and vendor libraries.
 // Also defines JUnit 4.
 dependencies {
@@ -53,6 +80,25 @@ dependencies {
     nativeDesktopZip wpi.deps.vendor.jni(wpi.platforms.desktop)
 
     testImplementation 'junit:junit:4.12'
+
+    compile "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.0-RC"
+    testCompile "junit:junit:4.12"
+
+    // We need to add the Kotlin stdlib in order to use most Kotlin language features.
+    compile "org.jetbrains.kotlin:kotlin-stdlib"
+
+    compile "com.github.5190GreenHopeRobotics:FalconLibrary:2020.1.2"
+
+    compile "com.fazecast:jSerialComm:2.4.1" // jserialcomm for jevois
+    compile "com.github.salomonbrys.kotson:kotson:2.5.0" // gson
+    compile "org.ejml:ejml-simple:0.38"
+    compile "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.0-RC"
+
+    // Unit Testing
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
+
+    //    XChart for Simulations and Tests
+    testCompile "org.knowm.xchart:xchart:3.2.2"
 
     // Enable simulation gui support. Must check the box in vscode to enable support
     // upon debugging
