--- a/build.gradle
+++ b/build.gradle
@@ -83,6 +83,7 @@ dependencies {
 
     compile "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.0-RC"
     testCompile "junit:junit:4.12"
+    testCompile "org.jfree:jfreechart:1.5.0"
 
     // We need to add the Kotlin stdlib in order to use most Kotlin language features.
     compile "org.jetbrains.kotlin:kotlin-stdlib"
@@ -113,6 +114,11 @@ jar {
     manifest edu.wpi.first.gradlerio.GradleRIOPlugin.javaManifest(ROBOT_MAIN_CLASS)
 }
 
+compileTestKotlin {
+    kotlinOptions{
+        jvmTarget = "1.8"
+    }
+}
 compileKotlin {
     kotlinOptions {
         jvmTarget = "1.8"
