--- a/build.gradle
+++ b/build.gradle
@@ -10,10 +10,10 @@ buildscript {
 
 plugins {
     id "java"
-    id "edu.wpi.first.GradleRIO" version "2020.2.2"
+    id "edu.wpi.first.GradleRIO" version "2020.1.2"
     id "org.jetbrains.kotlin.jvm" version "1.3.61"
     id "idea"
-    id "org.jlleitschuh.gradle.ktlint" version "9.1.1"
+    id "org.jlleitschuh.gradle.ktlint" version "9.0.0"
 }
 
 sourceCompatibility = JavaVersion.VERSION_11
@@ -83,12 +83,11 @@ dependencies {
 
     compile "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.0-RC"
     testCompile "junit:junit:4.12"
-    testCompile "org.jfree:jfreechart:1.5.0"
 
     // We need to add the Kotlin stdlib in order to use most Kotlin language features.
     compile "org.jetbrains.kotlin:kotlin-stdlib"
 
-    compile "com.github.mcm001:FalconLibrary:44847aa1e9"
+    compile "com.github.5190GreenHopeRobotics:FalconLibrary:2020.1.2"
 
     compile "com.fazecast:jSerialComm:2.4.1" // jserialcomm for jevois
     compile "com.github.salomonbrys.kotson:kotson:2.5.0" // gson
@@ -114,11 +113,6 @@ jar {
     manifest edu.wpi.first.gradlerio.GradleRIOPlugin.javaManifest(ROBOT_MAIN_CLASS)
 }
 
-compileTestKotlin {
-    kotlinOptions{
-        jvmTarget = "1.8"
-    }
-}
 compileKotlin {
     kotlinOptions {
         jvmTarget = "1.8"
