--- a/chameleon-vision/settings/settings.json
+++ b/chameleon-vision/settings/settings.json
@@ -1,10 +1,10 @@
 {
   "teamNumber" : 5940,
-  "connectionType" : "DHCP",
-  "ip" : "",
-  "gateway" : "",
-  "netmask" : "",
+  "connectionType" : "STATIC",
+  "ip" : "10.59.40.20",
+  "gateway" : "10.59.40.1",
+  "netmask" : "255.255.255.0",
   "hostname" : "raspberrypi",
-  "currentCamera" : "USB Camera-B4.09.24.1",
-  "currentPipeline" : -1
+  "currentCamera" : "Microsoft LifeCam HD-3000 (1)",
+  "currentPipeline" : 0
 }
