--- a/build.gradle
+++ b/build.gradle
@@ -19,7 +19,8 @@ plugins {
 sourceCompatibility = JavaVersion.VERSION_11
 targetCompatibility = JavaVersion.VERSION_11
 
-def ROBOT_MAIN_CLASS = "frc.robot.RobotKt"
+//def ROBOT_MAIN_CLASS = "frc.robot.RobotKt"
+def ROBOT_MAIN_CLASS = "statespacesimulation.Main"
 
 sourceSets {
     main.kotlin.srcDirs += 'src/generated/kotlin'
@@ -91,7 +92,7 @@ dependencies {
     // We need to add the Kotlin stdlib in order to use most Kotlin language features.
     compile "org.jetbrains.kotlin:kotlin-stdlib"
 
-    compile "com.github.mcm001:FalconLibrary:44847aa1e9"
+    compile "com.github.mcm001:FalconLibrary:13fc50f55d"
 
     compile "com.fazecast:jSerialComm:2.4.1" // jserialcomm for jevois
     compile "com.github.salomonbrys.kotson:kotson:2.5.0" // gson
