--- a/build.gradle
+++ b/build.gradle
@@ -19,7 +19,14 @@ plugins {
 sourceCompatibility = JavaVersion.VERSION_11
 targetCompatibility = JavaVersion.VERSION_11
 
+//wpi.maven.useFrcMavenLocalDevelopment = false
+//wpi.wpilibVersion = '2020.3.2-163-gdc9e560'
+
+wpi.maven.useDevelopment = true
+wpi.wpilibVersion = '2020.+'
+
 def ROBOT_MAIN_CLASS = "frc.robot.RobotKt"
+//def ROBOT_MAIN_CLASS = "Test"
 
 sourceSets {
     main.kotlin.srcDirs += 'src/generated/kotlin'
@@ -61,10 +68,11 @@ def includeDesktopSupport = true
 repositories {
     mavenCentral()
     jcenter()
-    mavenLocal()
+//    mavenLocal()
     maven { url "http://dl.bintray.com/kyonifer/maven" }
     maven { url "https://jitpack.io" }
-    maven { url "http://dev.imjac.in/maven" }
+//    maven { url "http://dev.imjac.in/maven" }
+    maven { url "https://frcmaven.wpi.edu/artifactory/development" }
 }
 
 // Defining my dependencies. In this case, WPILib (+ friends), and vendor libraries.
@@ -74,6 +82,13 @@ dependencies {
     nativeZip wpi.deps.wpilibJni(wpi.platforms.roborio)
     nativeDesktopZip wpi.deps.wpilibJni(wpi.platforms.desktop)
 
+//    implementation "edu.wpi.first.wpimath:wpimath-java:2020.3.2-163-gdc9e560"
+//    nativeZip "edu.wpi.first.wpimath:wpimath-java:2020.3.2-163-gdc9e560:linuxathena@zip"
+//
+//    implementation "edu.wpi.first.wpimath:wpimath-java:2020+"
+//    implementation "edu.wpi.first.wpimath:wpimath-cpp:2020+"
+//    runtime "edu.wpi.first.wpimath:wpimath-java:2020+"
+//    runtime "edu.wpi.first.wpimath:wpimath-cpp:2020+"
 
     implementation wpi.deps.vendor.java()
     nativeZip wpi.deps.vendor.jni(wpi.platforms.roborio)
