--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,7 @@ buildscript {
 
 plugins {
     id "java"
-    id "edu.wpi.first.GradleRIO" version "2020.3.2"
+    id "edu.wpi.first.GradleRIO" version "2021.1.1-beta-4"
     id "org.jetbrains.kotlin.jvm" version "1.3.61"
     id "idea"
     id "org.jlleitschuh.gradle.ktlint" version "9.1.1"
@@ -19,11 +19,9 @@ plugins {
 sourceCompatibility = JavaVersion.VERSION_11
 targetCompatibility = JavaVersion.VERSION_11
 
-//wpi.maven.useFrcMavenLocalDevelopment = false
-//wpi.wpilibVersion = '2020.3.2-163-gdc9e560'
-
-wpi.maven.useDevelopment = true
-wpi.wpilibVersion = '2020.+'
+//wpi.maven.useFrcMavenLocalDevelopment = true
+//wpi.maven.useDevelopment = true
+//wpi.wpilibVersion = '2021.+'
 
 def ROBOT_MAIN_CLASS = "frc.robot.RobotKt"
 //def ROBOT_MAIN_CLASS = "Test"
